Parser_V1/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> programa
Rule 1     programa -> condicion
Rule 2     condicion -> expresion
Rule 3     expresion -> termino
Rule 4     termino -> factor
Rule 5     factor -> PARIZQ expresion PARDER
Rule 6     factor -> IF condicion THEN programa ELSE programa ENDIF
Rule 7     factor -> ID
Rule 8     factor -> LET ID IGUAL expresion IN programa ENDLET
Rule 9     factor -> LET ID ENTERO IGUAL expresion IN programa ENDLET
Rule 10    expresion -> expresion MAS termino
Rule 11    expresion -> expresion MENOS termino
Rule 12    termino -> factor MULTIPLICACION expresion
Rule 13    termino -> factor DIVISION expresion
Rule 14    expresion -> COMENTARIO
Rule 15    condicion -> expresion MAYOR expresion
Rule 16    condicion -> expresion MENOR expresion
Rule 17    condicion -> expresion MAYORIGUAL expresion
Rule 18    condicion -> expresion MENORIGUAL expresion
Rule 19    condicion -> expresion IGUALIGUAL expresion
Rule 20    condicion -> expresion DIFERENTE expresion
Rule 21    factor -> ENTERO
Rule 22    factor -> DECIMAL
Rule 23    expresion -> expresion PTCOMA

Terminals, with rules where they appear

COMENTARIO           : 14
DECIMAL              : 22
DIFERENTE            : 20
DIVISION             : 13
ELSE                 : 6
ENDIF                : 6
ENDLET               : 8 9
ENTERO               : 9 21
ID                   : 7 8 9
IF                   : 6
IGUAL                : 8 9
IGUALIGUAL           : 19
IN                   : 8 9
LET                  : 8 9
MAS                  : 10
MAYOR                : 15
MAYORIGUAL           : 17
MENOR                : 16
MENORIGUAL           : 18
MENOS                : 11
MULTIPLICACION       : 12
PARDER               : 5
PARIZQ               : 5
PTCOMA               : 23
THEN                 : 6
error                : 

Nonterminals, with rules where they appear

condicion            : 1 6
expresion            : 2 5 8 9 10 11 12 13 15 15 16 16 17 17 18 18 19 19 20 20 23
factor               : 4 12 13
programa             : 6 6 8 9 0
termino              : 3 10 11

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . condicion
    (2) condicion -> . expresion
    (15) condicion -> . expresion MAYOR expresion
    (16) condicion -> . expresion MENOR expresion
    (17) condicion -> . expresion MAYORIGUAL expresion
    (18) condicion -> . expresion MENORIGUAL expresion
    (19) condicion -> . expresion IGUALIGUAL expresion
    (20) condicion -> . expresion DIFERENTE expresion
    (3) expresion -> . termino
    (10) expresion -> . expresion MAS termino
    (11) expresion -> . expresion MENOS termino
    (14) expresion -> . COMENTARIO
    (23) expresion -> . expresion PTCOMA
    (4) termino -> . factor
    (12) termino -> . factor MULTIPLICACION expresion
    (13) termino -> . factor DIVISION expresion
    (5) factor -> . PARIZQ expresion PARDER
    (6) factor -> . IF condicion THEN programa ELSE programa ENDIF
    (7) factor -> . ID
    (8) factor -> . LET ID IGUAL expresion IN programa ENDLET
    (9) factor -> . LET ID ENTERO IGUAL expresion IN programa ENDLET
    (21) factor -> . ENTERO
    (22) factor -> . DECIMAL

    COMENTARIO      shift and go to state 5
    PARIZQ          shift and go to state 7
    IF              shift and go to state 8
    ID              shift and go to state 9
    LET             shift and go to state 10
    ENTERO          shift and go to state 11
    DECIMAL         shift and go to state 12

    programa                       shift and go to state 1
    condicion                      shift and go to state 2
    expresion                      shift and go to state 3
    termino                        shift and go to state 4
    factor                         shift and go to state 6

state 1

    (0) S' -> programa .



state 2

    (1) programa -> condicion .

    $end            reduce using rule 1 (programa -> condicion .)
    ELSE            reduce using rule 1 (programa -> condicion .)
    ENDIF           reduce using rule 1 (programa -> condicion .)
    ENDLET          reduce using rule 1 (programa -> condicion .)


state 3

    (2) condicion -> expresion .
    (15) condicion -> expresion . MAYOR expresion
    (16) condicion -> expresion . MENOR expresion
    (17) condicion -> expresion . MAYORIGUAL expresion
    (18) condicion -> expresion . MENORIGUAL expresion
    (19) condicion -> expresion . IGUALIGUAL expresion
    (20) condicion -> expresion . DIFERENTE expresion
    (10) expresion -> expresion . MAS termino
    (11) expresion -> expresion . MENOS termino
    (23) expresion -> expresion . PTCOMA

    $end            reduce using rule 2 (condicion -> expresion .)
    THEN            reduce using rule 2 (condicion -> expresion .)
    ELSE            reduce using rule 2 (condicion -> expresion .)
    ENDIF           reduce using rule 2 (condicion -> expresion .)
    ENDLET          reduce using rule 2 (condicion -> expresion .)
    MAYOR           shift and go to state 13
    MENOR           shift and go to state 14
    MAYORIGUAL      shift and go to state 15
    MENORIGUAL      shift and go to state 16
    IGUALIGUAL      shift and go to state 17
    DIFERENTE       shift and go to state 18
    MAS             shift and go to state 19
    MENOS           shift and go to state 20
    PTCOMA          shift and go to state 21


state 4

    (3) expresion -> termino .

    MAYOR           reduce using rule 3 (expresion -> termino .)
    MENOR           reduce using rule 3 (expresion -> termino .)
    MAYORIGUAL      reduce using rule 3 (expresion -> termino .)
    MENORIGUAL      reduce using rule 3 (expresion -> termino .)
    IGUALIGUAL      reduce using rule 3 (expresion -> termino .)
    DIFERENTE       reduce using rule 3 (expresion -> termino .)
    MAS             reduce using rule 3 (expresion -> termino .)
    MENOS           reduce using rule 3 (expresion -> termino .)
    PTCOMA          reduce using rule 3 (expresion -> termino .)
    $end            reduce using rule 3 (expresion -> termino .)
    PARDER          reduce using rule 3 (expresion -> termino .)
    THEN            reduce using rule 3 (expresion -> termino .)
    ELSE            reduce using rule 3 (expresion -> termino .)
    ENDIF           reduce using rule 3 (expresion -> termino .)
    ENDLET          reduce using rule 3 (expresion -> termino .)
    IN              reduce using rule 3 (expresion -> termino .)


state 5

    (14) expresion -> COMENTARIO .

    MAYOR           reduce using rule 14 (expresion -> COMENTARIO .)
    MENOR           reduce using rule 14 (expresion -> COMENTARIO .)
    MAYORIGUAL      reduce using rule 14 (expresion -> COMENTARIO .)
    MENORIGUAL      reduce using rule 14 (expresion -> COMENTARIO .)
    IGUALIGUAL      reduce using rule 14 (expresion -> COMENTARIO .)
    DIFERENTE       reduce using rule 14 (expresion -> COMENTARIO .)
    MAS             reduce using rule 14 (expresion -> COMENTARIO .)
    MENOS           reduce using rule 14 (expresion -> COMENTARIO .)
    PTCOMA          reduce using rule 14 (expresion -> COMENTARIO .)
    $end            reduce using rule 14 (expresion -> COMENTARIO .)
    PARDER          reduce using rule 14 (expresion -> COMENTARIO .)
    THEN            reduce using rule 14 (expresion -> COMENTARIO .)
    ELSE            reduce using rule 14 (expresion -> COMENTARIO .)
    ENDIF           reduce using rule 14 (expresion -> COMENTARIO .)
    ENDLET          reduce using rule 14 (expresion -> COMENTARIO .)
    IN              reduce using rule 14 (expresion -> COMENTARIO .)


state 6

    (4) termino -> factor .
    (12) termino -> factor . MULTIPLICACION expresion
    (13) termino -> factor . DIVISION expresion

    MAYOR           reduce using rule 4 (termino -> factor .)
    MENOR           reduce using rule 4 (termino -> factor .)
    MAYORIGUAL      reduce using rule 4 (termino -> factor .)
    MENORIGUAL      reduce using rule 4 (termino -> factor .)
    IGUALIGUAL      reduce using rule 4 (termino -> factor .)
    DIFERENTE       reduce using rule 4 (termino -> factor .)
    MAS             reduce using rule 4 (termino -> factor .)
    MENOS           reduce using rule 4 (termino -> factor .)
    PTCOMA          reduce using rule 4 (termino -> factor .)
    $end            reduce using rule 4 (termino -> factor .)
    PARDER          reduce using rule 4 (termino -> factor .)
    THEN            reduce using rule 4 (termino -> factor .)
    ELSE            reduce using rule 4 (termino -> factor .)
    ENDIF           reduce using rule 4 (termino -> factor .)
    ENDLET          reduce using rule 4 (termino -> factor .)
    IN              reduce using rule 4 (termino -> factor .)
    MULTIPLICACION  shift and go to state 22
    DIVISION        shift and go to state 23


state 7

    (5) factor -> PARIZQ . expresion PARDER
    (3) expresion -> . termino
    (10) expresion -> . expresion MAS termino
    (11) expresion -> . expresion MENOS termino
    (14) expresion -> . COMENTARIO
    (23) expresion -> . expresion PTCOMA
    (4) termino -> . factor
    (12) termino -> . factor MULTIPLICACION expresion
    (13) termino -> . factor DIVISION expresion
    (5) factor -> . PARIZQ expresion PARDER
    (6) factor -> . IF condicion THEN programa ELSE programa ENDIF
    (7) factor -> . ID
    (8) factor -> . LET ID IGUAL expresion IN programa ENDLET
    (9) factor -> . LET ID ENTERO IGUAL expresion IN programa ENDLET
    (21) factor -> . ENTERO
    (22) factor -> . DECIMAL

    COMENTARIO      shift and go to state 5
    PARIZQ          shift and go to state 7
    IF              shift and go to state 8
    ID              shift and go to state 9
    LET             shift and go to state 10
    ENTERO          shift and go to state 11
    DECIMAL         shift and go to state 12

    expresion                      shift and go to state 24
    termino                        shift and go to state 4
    factor                         shift and go to state 6

state 8

    (6) factor -> IF . condicion THEN programa ELSE programa ENDIF
    (2) condicion -> . expresion
    (15) condicion -> . expresion MAYOR expresion
    (16) condicion -> . expresion MENOR expresion
    (17) condicion -> . expresion MAYORIGUAL expresion
    (18) condicion -> . expresion MENORIGUAL expresion
    (19) condicion -> . expresion IGUALIGUAL expresion
    (20) condicion -> . expresion DIFERENTE expresion
    (3) expresion -> . termino
    (10) expresion -> . expresion MAS termino
    (11) expresion -> . expresion MENOS termino
    (14) expresion -> . COMENTARIO
    (23) expresion -> . expresion PTCOMA
    (4) termino -> . factor
    (12) termino -> . factor MULTIPLICACION expresion
    (13) termino -> . factor DIVISION expresion
    (5) factor -> . PARIZQ expresion PARDER
    (6) factor -> . IF condicion THEN programa ELSE programa ENDIF
    (7) factor -> . ID
    (8) factor -> . LET ID IGUAL expresion IN programa ENDLET
    (9) factor -> . LET ID ENTERO IGUAL expresion IN programa ENDLET
    (21) factor -> . ENTERO
    (22) factor -> . DECIMAL

    COMENTARIO      shift and go to state 5
    PARIZQ          shift and go to state 7
    IF              shift and go to state 8
    ID              shift and go to state 9
    LET             shift and go to state 10
    ENTERO          shift and go to state 11
    DECIMAL         shift and go to state 12

    condicion                      shift and go to state 25
    expresion                      shift and go to state 3
    termino                        shift and go to state 4
    factor                         shift and go to state 6

state 9

    (7) factor -> ID .

    MULTIPLICACION  reduce using rule 7 (factor -> ID .)
    DIVISION        reduce using rule 7 (factor -> ID .)
    MAYOR           reduce using rule 7 (factor -> ID .)
    MENOR           reduce using rule 7 (factor -> ID .)
    MAYORIGUAL      reduce using rule 7 (factor -> ID .)
    MENORIGUAL      reduce using rule 7 (factor -> ID .)
    IGUALIGUAL      reduce using rule 7 (factor -> ID .)
    DIFERENTE       reduce using rule 7 (factor -> ID .)
    MAS             reduce using rule 7 (factor -> ID .)
    MENOS           reduce using rule 7 (factor -> ID .)
    PTCOMA          reduce using rule 7 (factor -> ID .)
    $end            reduce using rule 7 (factor -> ID .)
    PARDER          reduce using rule 7 (factor -> ID .)
    THEN            reduce using rule 7 (factor -> ID .)
    ELSE            reduce using rule 7 (factor -> ID .)
    ENDIF           reduce using rule 7 (factor -> ID .)
    ENDLET          reduce using rule 7 (factor -> ID .)
    IN              reduce using rule 7 (factor -> ID .)


state 10

    (8) factor -> LET . ID IGUAL expresion IN programa ENDLET
    (9) factor -> LET . ID ENTERO IGUAL expresion IN programa ENDLET

    ID              shift and go to state 26


state 11

    (21) factor -> ENTERO .

    MULTIPLICACION  reduce using rule 21 (factor -> ENTERO .)
    DIVISION        reduce using rule 21 (factor -> ENTERO .)
    MAYOR           reduce using rule 21 (factor -> ENTERO .)
    MENOR           reduce using rule 21 (factor -> ENTERO .)
    MAYORIGUAL      reduce using rule 21 (factor -> ENTERO .)
    MENORIGUAL      reduce using rule 21 (factor -> ENTERO .)
    IGUALIGUAL      reduce using rule 21 (factor -> ENTERO .)
    DIFERENTE       reduce using rule 21 (factor -> ENTERO .)
    MAS             reduce using rule 21 (factor -> ENTERO .)
    MENOS           reduce using rule 21 (factor -> ENTERO .)
    PTCOMA          reduce using rule 21 (factor -> ENTERO .)
    $end            reduce using rule 21 (factor -> ENTERO .)
    PARDER          reduce using rule 21 (factor -> ENTERO .)
    THEN            reduce using rule 21 (factor -> ENTERO .)
    ELSE            reduce using rule 21 (factor -> ENTERO .)
    ENDIF           reduce using rule 21 (factor -> ENTERO .)
    ENDLET          reduce using rule 21 (factor -> ENTERO .)
    IN              reduce using rule 21 (factor -> ENTERO .)


state 12

    (22) factor -> DECIMAL .

    MULTIPLICACION  reduce using rule 22 (factor -> DECIMAL .)
    DIVISION        reduce using rule 22 (factor -> DECIMAL .)
    MAYOR           reduce using rule 22 (factor -> DECIMAL .)
    MENOR           reduce using rule 22 (factor -> DECIMAL .)
    MAYORIGUAL      reduce using rule 22 (factor -> DECIMAL .)
    MENORIGUAL      reduce using rule 22 (factor -> DECIMAL .)
    IGUALIGUAL      reduce using rule 22 (factor -> DECIMAL .)
    DIFERENTE       reduce using rule 22 (factor -> DECIMAL .)
    MAS             reduce using rule 22 (factor -> DECIMAL .)
    MENOS           reduce using rule 22 (factor -> DECIMAL .)
    PTCOMA          reduce using rule 22 (factor -> DECIMAL .)
    $end            reduce using rule 22 (factor -> DECIMAL .)
    PARDER          reduce using rule 22 (factor -> DECIMAL .)
    THEN            reduce using rule 22 (factor -> DECIMAL .)
    ELSE            reduce using rule 22 (factor -> DECIMAL .)
    ENDIF           reduce using rule 22 (factor -> DECIMAL .)
    ENDLET          reduce using rule 22 (factor -> DECIMAL .)
    IN              reduce using rule 22 (factor -> DECIMAL .)


state 13

    (15) condicion -> expresion MAYOR . expresion
    (3) expresion -> . termino
    (10) expresion -> . expresion MAS termino
    (11) expresion -> . expresion MENOS termino
    (14) expresion -> . COMENTARIO
    (23) expresion -> . expresion PTCOMA
    (4) termino -> . factor
    (12) termino -> . factor MULTIPLICACION expresion
    (13) termino -> . factor DIVISION expresion
    (5) factor -> . PARIZQ expresion PARDER
    (6) factor -> . IF condicion THEN programa ELSE programa ENDIF
    (7) factor -> . ID
    (8) factor -> . LET ID IGUAL expresion IN programa ENDLET
    (9) factor -> . LET ID ENTERO IGUAL expresion IN programa ENDLET
    (21) factor -> . ENTERO
    (22) factor -> . DECIMAL

    COMENTARIO      shift and go to state 5
    PARIZQ          shift and go to state 7
    IF              shift and go to state 8
    ID              shift and go to state 9
    LET             shift and go to state 10
    ENTERO          shift and go to state 11
    DECIMAL         shift and go to state 12

    expresion                      shift and go to state 27
    termino                        shift and go to state 4
    factor                         shift and go to state 6

state 14

    (16) condicion -> expresion MENOR . expresion
    (3) expresion -> . termino
    (10) expresion -> . expresion MAS termino
    (11) expresion -> . expresion MENOS termino
    (14) expresion -> . COMENTARIO
    (23) expresion -> . expresion PTCOMA
    (4) termino -> . factor
    (12) termino -> . factor MULTIPLICACION expresion
    (13) termino -> . factor DIVISION expresion
    (5) factor -> . PARIZQ expresion PARDER
    (6) factor -> . IF condicion THEN programa ELSE programa ENDIF
    (7) factor -> . ID
    (8) factor -> . LET ID IGUAL expresion IN programa ENDLET
    (9) factor -> . LET ID ENTERO IGUAL expresion IN programa ENDLET
    (21) factor -> . ENTERO
    (22) factor -> . DECIMAL

    COMENTARIO      shift and go to state 5
    PARIZQ          shift and go to state 7
    IF              shift and go to state 8
    ID              shift and go to state 9
    LET             shift and go to state 10
    ENTERO          shift and go to state 11
    DECIMAL         shift and go to state 12

    expresion                      shift and go to state 28
    termino                        shift and go to state 4
    factor                         shift and go to state 6

state 15

    (17) condicion -> expresion MAYORIGUAL . expresion
    (3) expresion -> . termino
    (10) expresion -> . expresion MAS termino
    (11) expresion -> . expresion MENOS termino
    (14) expresion -> . COMENTARIO
    (23) expresion -> . expresion PTCOMA
    (4) termino -> . factor
    (12) termino -> . factor MULTIPLICACION expresion
    (13) termino -> . factor DIVISION expresion
    (5) factor -> . PARIZQ expresion PARDER
    (6) factor -> . IF condicion THEN programa ELSE programa ENDIF
    (7) factor -> . ID
    (8) factor -> . LET ID IGUAL expresion IN programa ENDLET
    (9) factor -> . LET ID ENTERO IGUAL expresion IN programa ENDLET
    (21) factor -> . ENTERO
    (22) factor -> . DECIMAL

    COMENTARIO      shift and go to state 5
    PARIZQ          shift and go to state 7
    IF              shift and go to state 8
    ID              shift and go to state 9
    LET             shift and go to state 10
    ENTERO          shift and go to state 11
    DECIMAL         shift and go to state 12

    expresion                      shift and go to state 29
    termino                        shift and go to state 4
    factor                         shift and go to state 6

state 16

    (18) condicion -> expresion MENORIGUAL . expresion
    (3) expresion -> . termino
    (10) expresion -> . expresion MAS termino
    (11) expresion -> . expresion MENOS termino
    (14) expresion -> . COMENTARIO
    (23) expresion -> . expresion PTCOMA
    (4) termino -> . factor
    (12) termino -> . factor MULTIPLICACION expresion
    (13) termino -> . factor DIVISION expresion
    (5) factor -> . PARIZQ expresion PARDER
    (6) factor -> . IF condicion THEN programa ELSE programa ENDIF
    (7) factor -> . ID
    (8) factor -> . LET ID IGUAL expresion IN programa ENDLET
    (9) factor -> . LET ID ENTERO IGUAL expresion IN programa ENDLET
    (21) factor -> . ENTERO
    (22) factor -> . DECIMAL

    COMENTARIO      shift and go to state 5
    PARIZQ          shift and go to state 7
    IF              shift and go to state 8
    ID              shift and go to state 9
    LET             shift and go to state 10
    ENTERO          shift and go to state 11
    DECIMAL         shift and go to state 12

    expresion                      shift and go to state 30
    termino                        shift and go to state 4
    factor                         shift and go to state 6

state 17

    (19) condicion -> expresion IGUALIGUAL . expresion
    (3) expresion -> . termino
    (10) expresion -> . expresion MAS termino
    (11) expresion -> . expresion MENOS termino
    (14) expresion -> . COMENTARIO
    (23) expresion -> . expresion PTCOMA
    (4) termino -> . factor
    (12) termino -> . factor MULTIPLICACION expresion
    (13) termino -> . factor DIVISION expresion
    (5) factor -> . PARIZQ expresion PARDER
    (6) factor -> . IF condicion THEN programa ELSE programa ENDIF
    (7) factor -> . ID
    (8) factor -> . LET ID IGUAL expresion IN programa ENDLET
    (9) factor -> . LET ID ENTERO IGUAL expresion IN programa ENDLET
    (21) factor -> . ENTERO
    (22) factor -> . DECIMAL

    COMENTARIO      shift and go to state 5
    PARIZQ          shift and go to state 7
    IF              shift and go to state 8
    ID              shift and go to state 9
    LET             shift and go to state 10
    ENTERO          shift and go to state 11
    DECIMAL         shift and go to state 12

    expresion                      shift and go to state 31
    termino                        shift and go to state 4
    factor                         shift and go to state 6

state 18

    (20) condicion -> expresion DIFERENTE . expresion
    (3) expresion -> . termino
    (10) expresion -> . expresion MAS termino
    (11) expresion -> . expresion MENOS termino
    (14) expresion -> . COMENTARIO
    (23) expresion -> . expresion PTCOMA
    (4) termino -> . factor
    (12) termino -> . factor MULTIPLICACION expresion
    (13) termino -> . factor DIVISION expresion
    (5) factor -> . PARIZQ expresion PARDER
    (6) factor -> . IF condicion THEN programa ELSE programa ENDIF
    (7) factor -> . ID
    (8) factor -> . LET ID IGUAL expresion IN programa ENDLET
    (9) factor -> . LET ID ENTERO IGUAL expresion IN programa ENDLET
    (21) factor -> . ENTERO
    (22) factor -> . DECIMAL

    COMENTARIO      shift and go to state 5
    PARIZQ          shift and go to state 7
    IF              shift and go to state 8
    ID              shift and go to state 9
    LET             shift and go to state 10
    ENTERO          shift and go to state 11
    DECIMAL         shift and go to state 12

    expresion                      shift and go to state 32
    termino                        shift and go to state 4
    factor                         shift and go to state 6

state 19

    (10) expresion -> expresion MAS . termino
    (4) termino -> . factor
    (12) termino -> . factor MULTIPLICACION expresion
    (13) termino -> . factor DIVISION expresion
    (5) factor -> . PARIZQ expresion PARDER
    (6) factor -> . IF condicion THEN programa ELSE programa ENDIF
    (7) factor -> . ID
    (8) factor -> . LET ID IGUAL expresion IN programa ENDLET
    (9) factor -> . LET ID ENTERO IGUAL expresion IN programa ENDLET
    (21) factor -> . ENTERO
    (22) factor -> . DECIMAL

    PARIZQ          shift and go to state 7
    IF              shift and go to state 8
    ID              shift and go to state 9
    LET             shift and go to state 10
    ENTERO          shift and go to state 11
    DECIMAL         shift and go to state 12

    termino                        shift and go to state 33
    factor                         shift and go to state 6

state 20

    (11) expresion -> expresion MENOS . termino
    (4) termino -> . factor
    (12) termino -> . factor MULTIPLICACION expresion
    (13) termino -> . factor DIVISION expresion
    (5) factor -> . PARIZQ expresion PARDER
    (6) factor -> . IF condicion THEN programa ELSE programa ENDIF
    (7) factor -> . ID
    (8) factor -> . LET ID IGUAL expresion IN programa ENDLET
    (9) factor -> . LET ID ENTERO IGUAL expresion IN programa ENDLET
    (21) factor -> . ENTERO
    (22) factor -> . DECIMAL

    PARIZQ          shift and go to state 7
    IF              shift and go to state 8
    ID              shift and go to state 9
    LET             shift and go to state 10
    ENTERO          shift and go to state 11
    DECIMAL         shift and go to state 12

    termino                        shift and go to state 34
    factor                         shift and go to state 6

state 21

    (23) expresion -> expresion PTCOMA .

    MAYOR           reduce using rule 23 (expresion -> expresion PTCOMA .)
    MENOR           reduce using rule 23 (expresion -> expresion PTCOMA .)
    MAYORIGUAL      reduce using rule 23 (expresion -> expresion PTCOMA .)
    MENORIGUAL      reduce using rule 23 (expresion -> expresion PTCOMA .)
    IGUALIGUAL      reduce using rule 23 (expresion -> expresion PTCOMA .)
    DIFERENTE       reduce using rule 23 (expresion -> expresion PTCOMA .)
    MAS             reduce using rule 23 (expresion -> expresion PTCOMA .)
    MENOS           reduce using rule 23 (expresion -> expresion PTCOMA .)
    PTCOMA          reduce using rule 23 (expresion -> expresion PTCOMA .)
    $end            reduce using rule 23 (expresion -> expresion PTCOMA .)
    PARDER          reduce using rule 23 (expresion -> expresion PTCOMA .)
    THEN            reduce using rule 23 (expresion -> expresion PTCOMA .)
    ELSE            reduce using rule 23 (expresion -> expresion PTCOMA .)
    ENDIF           reduce using rule 23 (expresion -> expresion PTCOMA .)
    ENDLET          reduce using rule 23 (expresion -> expresion PTCOMA .)
    IN              reduce using rule 23 (expresion -> expresion PTCOMA .)


state 22

    (12) termino -> factor MULTIPLICACION . expresion
    (3) expresion -> . termino
    (10) expresion -> . expresion MAS termino
    (11) expresion -> . expresion MENOS termino
    (14) expresion -> . COMENTARIO
    (23) expresion -> . expresion PTCOMA
    (4) termino -> . factor
    (12) termino -> . factor MULTIPLICACION expresion
    (13) termino -> . factor DIVISION expresion
    (5) factor -> . PARIZQ expresion PARDER
    (6) factor -> . IF condicion THEN programa ELSE programa ENDIF
    (7) factor -> . ID
    (8) factor -> . LET ID IGUAL expresion IN programa ENDLET
    (9) factor -> . LET ID ENTERO IGUAL expresion IN programa ENDLET
    (21) factor -> . ENTERO
    (22) factor -> . DECIMAL

    COMENTARIO      shift and go to state 5
    PARIZQ          shift and go to state 7
    IF              shift and go to state 8
    ID              shift and go to state 9
    LET             shift and go to state 10
    ENTERO          shift and go to state 11
    DECIMAL         shift and go to state 12

    factor                         shift and go to state 6
    expresion                      shift and go to state 35
    termino                        shift and go to state 4

state 23

    (13) termino -> factor DIVISION . expresion
    (3) expresion -> . termino
    (10) expresion -> . expresion MAS termino
    (11) expresion -> . expresion MENOS termino
    (14) expresion -> . COMENTARIO
    (23) expresion -> . expresion PTCOMA
    (4) termino -> . factor
    (12) termino -> . factor MULTIPLICACION expresion
    (13) termino -> . factor DIVISION expresion
    (5) factor -> . PARIZQ expresion PARDER
    (6) factor -> . IF condicion THEN programa ELSE programa ENDIF
    (7) factor -> . ID
    (8) factor -> . LET ID IGUAL expresion IN programa ENDLET
    (9) factor -> . LET ID ENTERO IGUAL expresion IN programa ENDLET
    (21) factor -> . ENTERO
    (22) factor -> . DECIMAL

    COMENTARIO      shift and go to state 5
    PARIZQ          shift and go to state 7
    IF              shift and go to state 8
    ID              shift and go to state 9
    LET             shift and go to state 10
    ENTERO          shift and go to state 11
    DECIMAL         shift and go to state 12

    factor                         shift and go to state 6
    expresion                      shift and go to state 36
    termino                        shift and go to state 4

state 24

    (5) factor -> PARIZQ expresion . PARDER
    (10) expresion -> expresion . MAS termino
    (11) expresion -> expresion . MENOS termino
    (23) expresion -> expresion . PTCOMA

    PARDER          shift and go to state 37
    MAS             shift and go to state 19
    MENOS           shift and go to state 20
    PTCOMA          shift and go to state 21


state 25

    (6) factor -> IF condicion . THEN programa ELSE programa ENDIF

    THEN            shift and go to state 38


state 26

    (8) factor -> LET ID . IGUAL expresion IN programa ENDLET
    (9) factor -> LET ID . ENTERO IGUAL expresion IN programa ENDLET

    IGUAL           shift and go to state 39
    ENTERO          shift and go to state 40


state 27

    (15) condicion -> expresion MAYOR expresion .
    (10) expresion -> expresion . MAS termino
    (11) expresion -> expresion . MENOS termino
    (23) expresion -> expresion . PTCOMA

    $end            reduce using rule 15 (condicion -> expresion MAYOR expresion .)
    THEN            reduce using rule 15 (condicion -> expresion MAYOR expresion .)
    ELSE            reduce using rule 15 (condicion -> expresion MAYOR expresion .)
    ENDIF           reduce using rule 15 (condicion -> expresion MAYOR expresion .)
    ENDLET          reduce using rule 15 (condicion -> expresion MAYOR expresion .)
    MAS             shift and go to state 19
    MENOS           shift and go to state 20
    PTCOMA          shift and go to state 21


state 28

    (16) condicion -> expresion MENOR expresion .
    (10) expresion -> expresion . MAS termino
    (11) expresion -> expresion . MENOS termino
    (23) expresion -> expresion . PTCOMA

    $end            reduce using rule 16 (condicion -> expresion MENOR expresion .)
    THEN            reduce using rule 16 (condicion -> expresion MENOR expresion .)
    ELSE            reduce using rule 16 (condicion -> expresion MENOR expresion .)
    ENDIF           reduce using rule 16 (condicion -> expresion MENOR expresion .)
    ENDLET          reduce using rule 16 (condicion -> expresion MENOR expresion .)
    MAS             shift and go to state 19
    MENOS           shift and go to state 20
    PTCOMA          shift and go to state 21


state 29

    (17) condicion -> expresion MAYORIGUAL expresion .
    (10) expresion -> expresion . MAS termino
    (11) expresion -> expresion . MENOS termino
    (23) expresion -> expresion . PTCOMA

    $end            reduce using rule 17 (condicion -> expresion MAYORIGUAL expresion .)
    THEN            reduce using rule 17 (condicion -> expresion MAYORIGUAL expresion .)
    ELSE            reduce using rule 17 (condicion -> expresion MAYORIGUAL expresion .)
    ENDIF           reduce using rule 17 (condicion -> expresion MAYORIGUAL expresion .)
    ENDLET          reduce using rule 17 (condicion -> expresion MAYORIGUAL expresion .)
    MAS             shift and go to state 19
    MENOS           shift and go to state 20
    PTCOMA          shift and go to state 21


state 30

    (18) condicion -> expresion MENORIGUAL expresion .
    (10) expresion -> expresion . MAS termino
    (11) expresion -> expresion . MENOS termino
    (23) expresion -> expresion . PTCOMA
